--- a/Student-Portal/Views/RegisterCourse/ShowCourse.cshtml
+++ b/Student-Portal/Views/RegisterCourse/ShowCourse.cshtml
@@ -12,105 +12,136 @@
         </button>
     </div>
 }
-<div class="row justify-content-md-center">
-    <div class="col-lg-9 mt-5">
-        <div class="card">
-            <div class="card-body">
-                <h4>Unpproved Courses</h4>
-                <p>Total number of Registered Course: @Model.UnappovedCourses.Count()</p>
-                <p>Total Units Registered: @Model.UnappovedCourses.Sum(i => i.CourseUnit)</p>
-                <br />
-                @if (Model.UnappovedCourses.Count() == 0)
-                {
-                    <p>You have not registered any courses. Click @Html.ActionLink("here", "Index", "RegisterCourse") to register a course.</p>
-                }
-                else
-                {
+<div class="row">
+    <div class="col-lg-8 col-ml-12">
+        <div class="col-12 mt-5">
+            <div class="card">
+                <div class="card-body">
+                    <h4>Unpproved Courses</h4>
+                    <br />
+                    @if (Model.UnappovedCourses.Count() == 0)
+                    {
+                        <p>You have not registered any courses. Click @Html.ActionLink("here", "Index", "RegisterCourse") to register a course.</p>
+                    }
+                    else
+                    {
 
-                    <table class="table">
-                        <tr>
-                            <th>
-                                @*@Html.DisplayNameFor(model => model.CourseName)*@
-                                Course Name
-                            </th>
-                            <th>
-                                @*@Html.DisplayNameFor(model => model.CourseCode)*@
-                                Course Code
-                            </th>
-                            <th>
-                                @*@Html.DisplayNameFor(model => model.CourseUnit)*@
-                                Course Unit
-                            </th>
-                            <th></th>
-                        </tr>
-
-                        @foreach (var item in Model.UnappovedCourses)
-                        {
+                        <table class="table">
                             <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CourseName)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CourseCode)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CourseUnit)
-                                </td>
+                                <th>
+                                    @*@Html.DisplayNameFor(model => model.CourseName)*@
+                                    Course Name
+                                </th>
+                                <th>
+                                    @*@Html.DisplayNameFor(model => model.CourseCode)*@
+                                    Course Code
+                                </th>
+                                <th>
+                                    @*@Html.DisplayNameFor(model => model.CourseUnit)*@
+                                    Course Unit
+                                </th>
+                                <th></th>
                             </tr>
-                        }
 
-                    </table>
-                }
+                            @foreach (var item in Model.UnappovedCourses)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.CourseName)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.CourseCode)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.CourseUnit)
+                                    </td>
+                                </tr>
+                            }
+
+                        </table>
+                    }
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 mt-5">
+            <div class="card">
+                <div class="card-body">
+                    <h4>Approved Courses</h4>
+                    <br />
+                    @if (Model.AppovedCourses.Count() == 0)
+                    {
+                        <p>You currently don't have any approved  courses. Please checkback later.</p>
+                    }
+                    else
+                    {
+
+                        <table class="table">
+                            <tr>
+                                <th>
+                                    @*@Html.DisplayNameFor(model => model.CourseName)*@
+                                    Course Name
+                                </th>
+                                <th>
+                                    @*@Html.DisplayNameFor(model => model.CourseCode)*@
+                                    Course Code
+                                </th>
+                                <th>
+                                    @*@Html.DisplayNameFor(model => model.CourseUnit)*@
+                                    Course Unit
+                                </th>
+                                <th></th>
+                            </tr>
+
+                            @foreach (var item in Model.AppovedCourses)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.CourseName)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.CourseCode)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.CourseUnit)
+                                    </td>
+                                </tr>
+                            }
+
+                        </table>
+                    }
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="col-lg-9 mt-5">
-        <div class="card">
-            <div class="card-body">
-                <h4>Approved Courses</h4>
-                <br />
-                @if (Model.AppovedCourses.Count() == 0)
-                {
-                    <p>You currently don't have any approved  courses. Please checkback later.</p>
-                }
-                else
-                {
+    <div class="col-lg-4 col-ml-12">
 
-                    <table class="table">
-                        <tr>
-                            <th>
-                                @*@Html.DisplayNameFor(model => model.CourseName)*@
-                                Course Name
-                            </th>
-                            <th>
-                                @*@Html.DisplayNameFor(model => model.CourseCode)*@
-                                Course Code
-                            </th>
-                            <th>
-                                @*@Html.DisplayNameFor(model => model.CourseUnit)*@
-                                Course Unit
-                            </th>
-                            <th></th>
-                        </tr>
-
-                        @foreach (var item in Model.AppovedCourses)
-                        {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CourseName)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CourseCode)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CourseUnit)
-                                </td>
-                            </tr>
-                        }
-
-                    </table>
-                }
+        <div class="col-12">
+            <div class="card mt-5">
+                <div class="card-body">
+                    <h4 class="header-title">Registration Details</h4>
+                    <form class="needs-validation" novalidate="">
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="numcourse">@Model.UnappovedCourses.Count()</span>
+                            </div>
+                            <input type="text" class="form-control" id="numcourse" disabled value="Total number of Registered Course" aria-describedby="basic-addon3">
+                        </div>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" style="font-weight:bold;" id="numcourse">@Model.UnappovedCourses.Sum(i => i.CourseUnit)</span>
+                            </div>
+                            <input type="text" class="form-control" id="numcourse" disabled value="Total Units Registered" aria-describedby="basic-addon3">
+                        </div>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" style="font-weight:bold;" id="numcourse">@Model.AppovedCourses.Sum(i => i.CourseUnit)</span>
+                            </div>
+                            <input type="text" class="form-control" id="numcourse" disabled value="Total Units Approved" aria-describedby="basic-addon3">
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
