--- a/Student-Portal/Views/Shared/_CustomLayout.cshtml
+++ b/Student-Portal/Views/Shared/_CustomLayout.cshtml
@@ -24,7 +24,7 @@
             "closeButton": true,
             "newestOnTop": true,
             "progressBar": false,
-            "positionClass": "toast-top-center",
+            "positionClass": "toast-bottom-right",
             "preventDuplicates": false,
             "onclick": null,
             "showDuration": "600",
